# build_shell

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILING  COPYING  Makefile.am  README  configure.ac
data/: CMakeLists.txt  Makefile.am
data/build_shell/: build_shell_completion.bash  build_shell_completion.bash.template  configure_build_shell_completion.cmake.template
data/build_shell/scripts/: build_autoreconf  build_autotools  build_qtbase  clone_git  clone_regular_dir  configure_autoreconf  configure_autotools  configure_cmake  configure_qmake  configure_qt  configure_qtbase  correct_branch_git  correct_branch_regular_dir  deep_clean_git  deep_clean_regular  generate_git  generate_regular_dir  pull_git  pull_regular_dir  state_git  state_git.sh  status_git
examples/: android-qt.buildset  clang.buildset  mutter_buildset  qt4.buildset  qt_creator.buildset  qt_quick_mac.buildset  vanilla_qt  wayland.buildset
examples/rpi-buildroot/: buildset
examples/rpi-buildroot/files/: buildroot_defconfig
examples/rpi-buildroot/files/mkspecs/linux-arm-g++/: qmake.conf
examples/rpi-buildroot/scripts/: build_buildroot  configure_buildroot  post_build_buildroot  pre_build_qtbase
src/: CMakeLists.txt  Makefile.am  arg.cpp  arg.h  build_shell-version.h.in  configuration.cpp  configuration.h  creator.cpp  creator.h  main.cpp  writer.cpp  writer.h
src/build_shell/: .build_action.cpp.swp  .env_script_builder.cpp.swp  CMakeLists.txt  Makefile.am  action.cpp  action.h  arg.cpp  arg.h  available_builds.cpp  available_builds.h  build_action.cpp  build_action.h  build_environment.cpp  build_environment.h  buildset_generator.cpp  buildset_generator.h  buildset_printer_action.cpp  buildset_printer_action.h  buildset_tree_builder.cpp  buildset_tree_builder.h  buildset_tree_writer.cpp  buildset_tree_writer.h  child_process_io_handler.cpp  child_process_io_handler.h  configuration.cpp  configuration.h  correct_branch_action.cpp  correct_branch_action.h  create_action.cpp  create_action.h  creator.cpp  creator.h  env_script_builder.cpp  env_script_builder.h  generate_action.cpp  generate_action.h  main.cpp  mmapped_file.cpp  mmapped_file.h  print_environment_action.cpp  (+21 more)
src/buildset_convert/: CMakeLists.txt  arg.h  buildset_converter.cpp  buildset_converter.h  main.cpp
src/jsonmod/: CMakeLists.txt  Makefile.am  arg.cpp  arg.h  configuration.cpp  configuration.h  json_streamer.cpp  json_streamer.h  main.cpp  test-data.json
src/src_descriptor/: Makefile.am  arg.cpp  arg.h  main.cpp
tests/: CMakeLists.txt  Makefile.am
tests/jsonmod/: CMakeLists.txt  Makefile.am  add_property  add_property.json  add_property_expect.json  only_modify_specified_subtree  only_modify_specified_subtree_expect.json  test_add_query_property.cmake
