build_shelldir= $(datadir)/build_shell
build_shell_scriptdir = $(build_shelldir)/scripts

dist_build_shell_script_DATA =				\
	build_shell/scripts/build_autoreconf	        \
	build_shell/scripts/build_autotools	        \
	build_shell/scripts/build_qmake		        \
	build_shell/scripts/build_qtbase	        \
	build_shell/scripts/clone_git		        \
	build_shell/scripts/clone_regular_dir	        \
	build_shell/scripts/configure_autoreconf        \
	build_shell/scripts/configure_autotools	        \
	build_shell/scripts/configure_qmake	        \
	build_shell/scripts/configure_qtbase	        \
	build_shell/scripts/install_autoreconf	        \
	build_shell/scripts/install_autotools	        \
	build_shell/scripts/install_qmake	        \
	build_shell/scripts/install_qtbase	        \
	build_shell/scripts/pull_git		        \
	build_shell/scripts/pull_regular_dir	        \
	build_shell/scripts/state_git		        \
	build_shell/scripts/state_regular_dir	        \
	build_shell/build_shell_completion.bash
